--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Games-SGF
-version:      0.01
-version_from: lib/Games/SGF.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Games-SGF
+version:             0.02
+abstract:            A general SGF parser
+license:             ~
+author:              
+    - David Whitcomb <whitcode@gmail.com>
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
     enum:                          0
     Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
