--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,26 @@
---- #YAML:1.0
-name:                Games-SGF
-version:             0.04
-abstract:            A general SGF parser
-license:             ~
-author:              
-    - David Whitcomb <whitcode@gmail.com>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    enum:                          1.016
-    Test::More:                    0
+---
+name: Games-SGF
+version: 0.05
+author: []
+abstract: A general SGF parser
+license: perl
+resources:
+  license: http://dev.perl.org/licenses/
+requires:
+  enum: 1.016
+  perl: 5.6.1
+build_requires:
+  Data::Dumper: 2.121
+  Scalar::Util: 1.14
+  Test::More: 0.7
+provides:
+  Games::SGF:
+    file: lib/Games/SGF.pm
+    version: 0.05
+  Games::SGF::Go:
+    file: lib/Games/SGF/Go.pm
+    version: 0.05
+generated_by: Module::Build version 0.2808
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
