--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,11 @@
 ---
 name: Games-SGF
-version: 0.08
+version: 0.99
 author: []
 abstract: A general SGF parser
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
-requires:
-  enum: 1.016
-  perl: 5.6.1
 build_requires:
   Data::Dumper: 2.121
   Pod::Coverage: 0.19
@@ -16,17 +13,23 @@ build_requires:
   Test::More: 0.7
   Test::Pod: 1.26
   Test::Pod::Coverage: 1.08
+requires:
+  Clone::PP: 1.02
+  enum: 1.016
+  perl: v5.6.1
+configure_requires:
+  Module::Build: 0.35
 provides:
   Games::SGF:
     file: lib/Games/SGF.pm
-    version: 0.08
+    version: 0.99
   Games::SGF::Go:
     file: lib/Games/SGF/Go.pm
-    version: 0.08
+    version: 0.99
   Games::SGF::Util:
     file: lib/Games/SGF/Util.pm
-    version: 0.08
-generated_by: Module::Build version 0.2808
+    version: 0.99
+generated_by: Module::Build version 0.35
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
